fix broken css when zoom

--- a/NTBStampDuty/web/css/general_stype.css
+++ b/NTBStampDuty/web/css/general_stype.css
@@ -1,5 +1,5 @@
 html {font-weight: normal; background: none repeat scroll 0% 0% #e5e5d5; color: #FFF; min-width: 1100px; height: 100%; width: 100%;}
-html, body {margin: 0px; padding: 0px; height: 100%; width: 100%; position: relative; overflow: auto; text-align: left; font: 12px "Lucida Grande",Verdana,Arial,Helvetica,sans-serif;}
+html, body {margin: 0px; padding: 0px; height: 100%; width: 1345px; position: relative; text-align: left; font: 12px "Lucida Grande",Verdana,Arial,Helvetica,sans-serif;}
 
 .wrapper{height: 80%; margin: 0px 20px 0px 210px; padding: 0px;}
 
